Add href attribute to anchor element in links.html

--- a/links.html
+++ b/links.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Links</h1>
 
-    <p>This example is about links and <a>images</a>.</p>
+    <p>This example is about links and <a href='images.html'>images</a>.</p>
   </body>
 </html>
