--- a/links.html
+++ b/links.html
@@ -7,5 +7,11 @@
     <h1>Links</h1>
 
     <p>This example is about links and <a href='images.html'>images</a>.</p>
+
+    <p>This particular page is about links! There are three kinds of links:</p>
+
+    <ul>
+      <!-- Add <li> elements here -->
+    </ul>
   </body>
 </html>
