add a new paragraph to links.html

--- a/links.html
+++ b/links.html
@@ -10,15 +10,20 @@
 
     <p>This particular page is about links! There are three kinds of links:</p>
 
-    <ul>
-      <!-- Add <li> elements here -->
-      <li>Absolute links, like to
-          <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>Mozilla
-          Developer Network</a>, which is a very good resource for web
-          developers.</li>
+      <ul>
+        <!-- Add <li> elements here -->
+        <li>Absolute links, like to
+            <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>Mozilla
+            Developer Network</a>, which is a very good resource for web
+            developers.</li>
 
-      <li>Relative links, like to our <a href='misc/extras.html'>extras
-          page</a>.</li>
-    </ul>
+        <li>Relative links, like to our <a href='misc/extras.html'>extras
+            page</a>.</li>
+
+      </ul>
+    
+    <p>This page is about miscellaneous HTML things, but you may
+       also be interested in <a href='links.html'>links</a> or
+       <a href='images.html'>images</a>.</p>
   </body>
 </html>
