--- a/misc/extras.html
+++ b/misc/extras.html
@@ -6,8 +6,8 @@
   <body>
     <h1>Extras</h1>
 
-    <p>This page is about miscellaneous HTML things, but you may
-        also be interested in <a href='links.html'>links</a> or
-        <a href='images.html'>images</a>.</p>
+    <p>This page is about miscellaneous HTML things, but you may also be
+        interested in <a href='../links.html'>links</a> or <a
+        href='../images.html'>images</a>.</p>
   </body>
 </html>
