--- a/links.html
+++ b/links.html
@@ -3,6 +3,7 @@
   <head>
     <title>Links</title>
   </head>
+
   <body>
     <h1>Links</h1>
 
@@ -13,17 +14,13 @@
       <ul>
         <!-- Add <li> elements here -->
         <li>Absolute links, like to
-            <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>Mozilla
-            Developer Network</a>, which is a very good resource for web
-            developers.</li>
+            <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'
+            target='_blank'>Mozilla Developer Network</a>, which is a very good
+            resource for web developers.</li>
 
         <li>Relative links, like to our <a href='misc/extras.html'>extras
             page</a>.</li>
 
       </ul>
-    
-    <p>This page is about miscellaneous HTML things, but you may
-       also be interested in <a href='links.html'>links</a> or
-       <a href='images.html'>images</a>.</p>
   </body>
 </html>
