--- a/images.html
+++ b/images.html
@@ -5,5 +5,15 @@
   </head>
   <body>
     <h1>Images</h1>
+
+    <p>This page covers common image formats, but you may also be looking for <a
+      href='links.html'>links</a> and <a href='misc/extras.html'>useful
+      extras</a>.</p>
+   
+    <h2>JPGs</h2>
+   
+    <p>JPG images are good for photos.</p>
+   
+    <img src='images/mochi.jpg'/>
   </body>
 </html>
