add img element to images.html

--- a/images.html
+++ b/images.html
@@ -15,5 +15,11 @@
     <p>JPG images are good for photos.</p>
    
     <img src='images/mochi.jpg'/>
+
+    <h2>GIFs</h2>
+
+    <p>GIFs are good for animations.</p>
+
+    <img src='images/mochi.gif'/>
   </body>
 </html>
