--- a/images.html
+++ b/images.html
@@ -21,5 +21,11 @@
     <p>GIFs are good for animations.</p>
 
     <img src='images/mochi.gif'/>
+
+    <h2>PNGs</h2>
+
+    <p>PNGs are good for diagrams and icons.</p>
+
+    <img src='images/mochi.png'/>
   </body>
 </html>
