add img element to images.html

--- a/images.html
+++ b/images.html
@@ -27,5 +27,11 @@
     <p>PNGs are good for diagrams and icons.</p>
 
     <img src='images/mochi.png'/>
+
+    <h2>SVGs</h2>
+
+    <p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
+
+    <img src='images/mochi.svg'/>
   </body>
 </html>
