--- a/images.html
+++ b/images.html
@@ -11,22 +11,26 @@
       extras</a>.</p>
    
     <h2>JPGs</h2>
-   
+
     <p>JPG images are good for photos.</p>
-   
-    <img src='images/mochi.jpg'/>
+    
+    <!-- In JPGs section -->
+    <img src='images/mochi.jpg' width='75'/>
 
     <h2>GIFs</h2>
 
     <p>GIFs are good for animations.</p>
 
-    <img src='images/mochi.gif'/>
+    <!-- In GIFs section -->
+    <img src='images/mochi.gif' width='75'/>
 
     <h2>PNGs</h2>
 
     <p>PNGs are good for diagrams and icons.</p>
 
-    <img src='images/mochi.png'/>
+    <!-- In PNGs section -->
+    <img src='images/mochi.png' width='75'/>
+  
 
     <h2>SVGs</h2>
 
