add alternative text attribute to img element in images.html

--- a/images.html
+++ b/images.html
@@ -13,29 +13,32 @@
     <h2>JPGs</h2>
 
     <p>JPG images are good for photos.</p>
-    
+
     <!-- In JPGs section -->
-    <img src='images/mochi.jpg' width='75'/>
+    <img src='images/mochi.jpg' width='75' alt='A mochi ball in a bubble'/>
+
 
     <h2>GIFs</h2>
 
     <p>GIFs are good for animations.</p>
 
     <!-- In GIFs section -->
-    <img src='images/mochi.gif' width='75'/>
+    <img src='images/mochi.gif' width='75' alt='A dancing mochi ball'/>
+
 
     <h2>PNGs</h2>
 
     <p>PNGs are good for diagrams and icons.</p>
 
     <!-- In PNGs section -->
-    <img src='images/mochi.png' width='75'/>
+    <img src='images/mochi.png' width='75' alt='A mochi ball'/>
   
 
     <h2>SVGs</h2>
 
     <p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
 
-    <img src='images/mochi.svg'/>
+    <!-- In SVGs section -->
+    <img src='images/mochi.svg' alt='A mochi ball with Bézier handles'/>
   </body>
 </html>
