--- a/misc/extras.html
+++ b/misc/extras.html
@@ -9,5 +9,17 @@
     <p>This page is about miscellaneous HTML things, but you may also be
         interested in <a href='../links.html'>links</a> or <a
         href='../images.html'>images</a>.</p>
+    
+        <h2>Character Sets</h2>
+
+    <p>You can use UTF-8 to count in Turkish:</p>
+        
+    <ol>
+      <li>bir</li>
+      <li>iki</li>
+      <li>üç</li>
+      <li>dört</li>
+      <li>beş</li>
+    </ol>
   </body>
 </html>
