--- a/misc/extras.html
+++ b/misc/extras.html
@@ -11,7 +11,7 @@
         interested in <a href='../links.html'>links</a> or <a
         href='../images.html'>images</a>.</p>
     
-        <h2>Character Sets</h2>
+    <h2>Character Sets</h2>
 
     <p>You can use UTF-8 to count in Turkish:</p>
         
@@ -22,5 +22,13 @@
       <li>dört</li>
       <li>beş</li>
     </ol>
+
+    <h2>HTML Entities</h2>
+    <p>There are three reserved characters in HTML: &lt; &gt; and &amp;. You
+       should always use HTML entities for these three characters.</p>
+
+    <p>If you&rsquo;re into &ldquo;web typography,&rdquo; you&rsquo;ll also find
+       yourself using curly quotes quite a bit.</p>
+
   </body>
 </html>
